src/test/deca/syntax/invalid/intermediaire2/arithmetiques/06slashIncomplete.deca
// Description:
//    tests de programme incorrect lexicalement (operation sans operande de gauche)
//
// Resultats:
//  06slashIncomplete.deca:12:8:
//
// Historique:
//    cree le 16/06/2022

{
    int x;
    x = / 1;
}
